sharing: use UUIDs instead of IDs for NM connection identification

Despite the name, the connection ID is a human readable string
and is not guaranteed to be unique.

https://bugzilla.gnome.org/show_bug.cgi?id=732218